--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libcloudproviders
-url = https://gitlab.gnome.org/World/libcloudproviders/-/archive/0.3.5/libcloudproviders-0.3.5.tar.gz
+url = https://gitlab.gnome.org/World/libcloudproviders/-/archive/0.3.6/libcloudproviders-0.3.6.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
@@ -59,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
